# mandacaru.dev-ibiapaba-cdd

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: lint-and-format.yaml
config/: main.yaml
data/interim/: data.csv
data/processed/: data.csv
frontend/: Dockerfile  next.config.js  nginx.conf  package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/components/: typography.tsx
frontend/src/components/about/: member-card.tsx  the-project.tsx
frontend/src/components/chat/: sentiment-badge-factory.tsx  sentiment-card.tsx  sentiment-display.tsx  sentiment-history.tsx  sentiment-input.tsx
frontend/src/components/home/: hero.tsx  possible.tsx  trusted-by.tsx
frontend/src/components/ui/: footer.tsx  navbar.tsx
frontend/src/contexts/: sentiment-context.tsx
models/: dt.joblib
notebooks/: 1.0-scr-analise-exploratoria.ipynb  1.0-scr-eda.ipynb  1.0-scr-pre-procesamento.ipynb  1.0-scr-tratamento-de-dados.ipynb  2.0-lapl-tratamento-dados.ipynb  3.0-emss+cegu-pre-procesamento.ipynb  4.0-emss+lapl-classificadores.ipynb  4.0-lapl-classificadores.ipynb  5.0-lapl-importância-de-variáveis.ipynb  Untitled.ipynb  modelo_analisador_sentimentos.joblib  vetorizador_analisador_sentimentos.joblib
src/: api.py  config.py  data_loader.py  process.py
